# app/Presenter/Http/routes/api/CartRoutes.php
@@ -6,11 +6,14 @@ use App\Application\Controllers\CartController;
 
 
 Route::middleware(['jwt.verify', CartAccess::class])->group(function () {
-        Route::post('cart/add', [CartController::class, 'addToCart']);
-        Route::put('cart/update', [CartController::class, 'updateCart']);
-        // Route::post('cart/buynow', [CartController::class, 'buyNow']);
-        Route::get('/cart', [CartController::class, 'showCart']);
-        Route::delete('/cart/remove', [CartController::class, 'removeAllCart']);
-        Route::post('cart/order', [CartController::class, 'orderCart']);
-});
+        Route::prefix('cart')->group(function () {
+            Route::post('add', [CartController::class, 'addToCart']);
+            Route::put('update', [CartController::class, 'updateCart']);
+            Route::post('buy', [CartController::class, 'payCart']);
+            Route::get('/', [CartController::class, 'showCart']);
+            Route::delete('remove/{productId?}', [CartController::class, 'removeFromCart']);
+            Route::post('order', [CartController::class, 'orderCart']);
+        });
+    });
+    
 
